re PR c++/10527 (confused error message with "new int()" parameter initializer)

PR c++/10527
	* error.c (dump_expr): Correctly handling of NEW_EXPR.4

	PR c++/10527
	* g++.dg/init/new7.C: New test.

From-SVN: r66246