gcc/cp/error.c
@@ -1650,6 +1650,7 @@ dump_expr (t, flags)
     case NEW_EXPR:
       {
 	tree type = TREE_OPERAND (t, 1);
+	tree init = TREE_OPERAND (t, 2);
 	if (NEW_EXPR_USE_GLOBAL (t))
 	  print_scope_operator (scratch_buffer);
 	output_add_string (scratch_buffer, "new ");
@@ -1666,10 +1667,17 @@ dump_expr (t, flags)
 					    TREE_OPERAND (type, 1),
 					    integer_one_node))));
 	dump_type (type, flags);
-	if (TREE_OPERAND (t, 2))
+	if (init)
 	  {
 	    print_left_paren (scratch_buffer);
-	    dump_expr_list (TREE_OPERAND (t, 2), flags);
+	    if (TREE_CODE (init) == TREE_LIST)
+	      dump_expr_list (init, flags);
+	    else if (init == void_zero_node)
+	      /* This representation indicates an empty initializer,
+		 e.g.: "new int()".  */
+	      ;
+	    else
+	      dump_expr (init, flags);
 	    print_right_paren (scratch_buffer);
 	  }
       }
