gcc/testsuite/g++.dg/init/new7.C
@@ -1,0 +1,7 @@
+template <class T>
+ struct Foo
+ {};
+ 
+ template <class T>
+ void Foo<T>::NON_EXISTENT(int* val = new int()) {} // { dg-error "" }
+ 
